Fixed the horizontal scrolling

--- a/generalStyles.css
+++ b/generalStyles.css
@@ -271,7 +271,7 @@ html{
     color: white;
     font-family: Helvetica, sans-serif;
     /* line-height: 160%; */
-    letter-spacing: 14px;
+    letter-spacing: 10px;
     font-size: 30px;
     text-align: left;
     padding-left: 25%;
